k8s/mylab/ingress/examples/tomcat-ingress/testing-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: testing
  labels: 
    env: testing
